// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-schemes return errors if schemes is an empty array  1`] = `
Array [
  Object {
    "code": "api-schemes",
    "message": "should NOT have fewer than 1 items",
    "path": Array [
      "schemes",
    ],
    "severity": 1,
  },
]
`;

exports[`api-schemes return errors if schemes is missing  1`] = `
Array [
  Object {
    "code": "api-schemes",
    "message": "schemes does not exist",
    "path": Array [
      "schemes",
    ],
    "severity": 1,
  },
]
`;
